--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.flatlaf-demo-0.43.jar=C:\\Users\\Lenovo\\OneDrive\\Documentos\\U_
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-demo-0.43.jar}
+    ${file.reference.flatlaf-demo-0.43.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyecto.uber.llite.ProyectoUberLlite
+main.class=Presentation.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
