--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,14 @@ dist.jar=${dist.dir}/Proyecto_Uber_Llite.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=D:\\Programs\\Programacion Universidad\\Java\\Librerias\\GUI\\AbsoluteLayout.jar
 file.reference.Beprocode.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto\\Uber Lite\\dist\\lib\\Beprocode.jar
+file.reference.Beprocode.jar-1=JAR's\\Beprocode.jar
+file.reference.flatlaf-demo-0.43.jar=dist\\lib\\flatlaf-demo-0.43.jar
 file.reference.flatlaf-demo-0.43.jar-2=D:\\Programs\\Programacion Universidad\\Java\\Librerias\\GUI\\flatlaf-demo-0.43.jar
 file.reference.Laboratorio2.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 5\\Laboratorio2\\dist\\Laboratorio2.jar
+file.reference.Laboratorio2.jar-1=JAR's\\Laboratorio2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +44,11 @@ javac.classpath=\
     ${file.reference.Laboratorio2.jar}:\
     ${file.reference.Beprocode.jar}:\
     ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.flatlaf-demo-0.43.jar-2}
+    ${file.reference.flatlaf-demo-0.43.jar-2}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.flatlaf-demo-0.43.jar}:\
+    ${file.reference.Beprocode.jar-1}:\
+    ${file.reference.Laboratorio2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
