--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,10 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.AbsoluteLayout.jar-1=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto Uber Llite\\JAR's\\AbsoluteLayout.jar
+file.reference.Beprocode.jar=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto Uber Llite\\JAR's\\Beprocode.jar
+file.reference.flatlaf-demo-0.43.jar-2=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto Uber Llite\\JAR's\\flatlaf-demo-0.43.jar
+file.reference.Laboratorio2.jar=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto Uber Llite\\JAR's\\Laboratorio2.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
