Ventana Admin_Windoww creada

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,12 @@ file.reference.AbsoluteLayout.jar-1=D:\\Programs\\Programacion Universidad\\Java
 file.reference.Beprocode.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto\\Uber Lite\\dist\\lib\\Beprocode.jar
 file.reference.Beprocode.jar-1=JAR's\\Beprocode.jar
 file.reference.flatlaf-demo-0.43.jar=dist\\lib\\flatlaf-demo-0.43.jar
+file.reference.flatlaf-demo-0.43.jar-1=JAR's\\flatlaf-demo-0.43.jar
 file.reference.flatlaf-demo-0.43.jar-2=D:\\Programs\\Programacion Universidad\\Java\\Librerias\\GUI\\flatlaf-demo-0.43.jar
+file.reference.GrafoListaAdyacencia.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 10\\Code\\GrafoListaAdyacencia\\dist\\GrafoListaAdyacencia.jar
 file.reference.Laboratorio2.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 5\\Laboratorio2\\dist\\Laboratorio2.jar
 file.reference.Laboratorio2.jar-1=JAR's\\Laboratorio2.jar
+file.reference.Semana6.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 6\\Code\\Semana6\\dist\\Semana6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +51,10 @@ javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.flatlaf-demo-0.43.jar}:\
     ${file.reference.Beprocode.jar-1}:\
-    ${file.reference.Laboratorio2.jar-1}
+    ${file.reference.Laboratorio2.jar-1}:\
+    ${file.reference.GrafoListaAdyacencia.jar}:\
+    ${file.reference.Semana6.jar}:\
+    ${file.reference.flatlaf-demo-0.43.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
