--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,12 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.AbsoluteLayout.jar-1=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto\\JAR's\\Beprocode.jar
-file.reference.Beprocode.jar=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto\\JAR's\\Beprocode.jar
-file.reference.flatlaf-demo-0.43.jar-2=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto\\JAR's\\flatlaf-demo-0.43.jar
-file.reference.GrafoListaAdyacencia.jar=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto\\JAR's\\GrafoListaAdyacencia.jar
-file.reference.Laboratorio2.jar=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto\\JAR's\\Laboratorio2.jar
-file.reference.Semana6.jar=C:\\Users\\Lenovo\\OneDrive\\Escritorio\\PROYECTOS\\PROYECTO_ESTRUCTURAS\\Proyecto\\JAR's\\Semana6.jar
+file.reference.AbsoluteLayout.jar-1=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto Git\\Proyecto\\JAR's\\AbsoluteLayout.jar
+file.reference.Beprocode.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto Git\\Proyecto\\JAR's\\Beprocode.jar
+file.reference.flatlaf-demo-0.43.jar-2=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto Git\\Proyecto\\JAR's\\flatlaf-demo-0.43.jar
+file.reference.GrafoListaAdyacencia.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto Git\\Proyecto\\JAR's\\GrafoListaAdyacencia.jar
+file.reference.Laboratorio2.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto Git\\Proyecto\\JAR's\\Laboratorio2.jar
+file.reference.Semana6.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto Git\\Proyecto\\JAR's\\Semana6.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\JD101\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
