--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,37 +29,21 @@ dist.jar=${dist.dir}/Proyecto_Uber_Llite.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-1=D:\\Programs\\Programacion Universidad\\Java\\Librerias\\GUI\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-2=JAR's\\AbsoluteLayout.jar
-file.reference.Beprocode.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Proyecto\\Uber Lite\\dist\\lib\\Beprocode.jar
-file.reference.Beprocode.jar-1=JAR's\\Beprocode.jar
-file.reference.flatlaf-demo-0.43.jar=dist\\lib\\flatlaf-demo-0.43.jar
-file.reference.flatlaf-demo-0.43.jar-1=JAR's\\flatlaf-demo-0.43.jar
-file.reference.flatlaf-demo-0.43.jar-2=D:\\Programs\\Programacion Universidad\\Java\\Librerias\\GUI\\flatlaf-demo-0.43.jar
-file.reference.GrafoListaAdyacencia.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 10\\Code\\GrafoListaAdyacencia\\dist\\GrafoListaAdyacencia.jar
-file.reference.GrafoListaAdyacencia.jar-2=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 10\\Code\\GrafoListaAdyacencia\\dist\\GrafoListaAdyacencia.jar
-file.reference.Laboratorio2.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 5\\Laboratorio2\\dist\\Laboratorio2.jar
-file.reference.Laboratorio2.jar-1=JAR's\\Laboratorio2.jar
-file.reference.Semana6.jar=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 6\\Code\\Semana6\\dist\\Semana6.jar
-file.reference.Semana6.jar-1=D:\\Universidad\\Estructura de Datos y Algoritmos\\Semana 6\\Code\\Semana6\\dist\\Semana6.jar
+file.reference.AbsoluteLayout.jar=JAR's\\AbsoluteLayout.jar
+file.reference.Beprocode.jar=JAR's\\Beprocode.jar
+file.reference.flatlaf-demo-0.43.jar=JAR's\\flatlaf-demo-0.43.jar
+file.reference.GrafoListaAdyacencia.jar=JAR's\\GrafoListaAdyacencia.jar
+file.reference.Laboratorio2.jar=JAR's\\Laboratorio2.jar
+file.reference.Semana6.jar=JAR's\\Semana6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Laboratorio2.jar}:\
-    ${file.reference.Beprocode.jar}:\
-    ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.flatlaf-demo-0.43.jar-2}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.flatlaf-demo-0.43.jar}:\
-    ${file.reference.Beprocode.jar-1}:\
-    ${file.reference.Laboratorio2.jar-1}:\
-    ${file.reference.GrafoListaAdyacencia.jar}:\
+    ${file.reference.Beprocode.jar}:\
+    ${file.reference.Laboratorio2.jar}:\
     ${file.reference.Semana6.jar}:\
-    ${file.reference.flatlaf-demo-0.43.jar-1}:\
-    ${file.reference.GrafoListaAdyacencia.jar-2}:\
-    ${file.reference.Semana6.jar-1}:\
-    ${file.reference.AbsoluteLayout.jar-2}
+    ${file.reference.flatlaf-demo-0.43.jar}:\
+    ${file.reference.GrafoListaAdyacencia.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
